Modified security configuration and added ADMIN role